# DTEAM-django-practical-test

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
CVProject/: celery.py  constants.py  settings.py  urls.py
audit/: middleware.py  models.py  tests.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/templates/audit/: recent_logs.html
main/: admin.py  context_processors.py  models.py  serializers.py  tasks.py  tests.py  utils.py  views.py
main/fixtures/: bio_items.json  candidate_projects.json  candidate_skills.json  candidates.json  contact_types.json  contacts.json  cv.json  projects.json  skills.json  users.json
main/migrations/: 0001_initial.py  0002_bioitem_contact_contacttype_project_skill_user_and_more.py  0003_remove_project_user_remove_skill_user_and_more.py  0004_alter_contact_user.py  0005_candidate_candidateproject_candidateskill_and_more.py  0006_alter_bioitem_candidate_and_more.py  0007_auto_20250407_1921.py  0008_alter_project_project_name.py
main/templates/includes/: navbar.html
main/templates/main/: cv_detail.html  cv_list.html  email_form.html  settings.html  translate_widget.html
main/views/: api_views.py  frontend_views.py  helpers.py
scripts/: lint_fix.py
static/css/: styles.css
templates/: base.html
templates/includes/: alerts.html  candidate_contacts.html  candidate_projects.html  candidate_skills.html  navbar.html
templates/registration/: login.html
