[project]
name = "cvproject"
version = "0.1.0"
description = "a django-based cv project"
authors = [
    {name = "illia zolotukha",email = "job.illia.igorevich@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-bootstrap-v5 (>=1.0.11,<2.0.0)",
    "django (>=4.2,<5.0)",
    "weasyprint (>=65.0,<66.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
   line-length = 88

[tool.isort]
profile = "black"

[tool.poetry.scripts]
lint-fix = "scripts.lint_fix:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
autoflake = "^2.3.1"
isort = "^6.0.1"
black = "^25.1.0"

